Place mobile padding not on bottom div (which may or may not contain content) but rather in the examples partial, and only if we actually have a carousel (preventing gap between hero content and footer in the case that we don't have carousels).

--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -27,9 +27,6 @@
   }
   .bottom {
     position: relative;
-    @include mobile {
-      padding: 0 30px 42px 30px;
-    }
   }
 
   .services-carousel {
