--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -49,6 +49,7 @@ form.login {
 
 .main {
   display: none;
+  overflow-x: hidden;
 }
 
 .modal-open {
