--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -151,3 +151,9 @@
     margin-top: 24px;
   }
 }
+
+.services__examples {
+  @include mobile {
+    padding: 0 30px 42px 30px;
+  }
+}
